// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WatchListItem /> should render properly when dailyChange is above 0 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#eee",
      "borderBottomWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#666",
            "fontSize": 12,
          },
          Object {
            "color": "#566ed3",
            "fontWeight": "bold",
          },
        ]
      }
    >
      APPL
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#666",
          "fontSize": 12,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#666",
            "fontSize": 12,
          },
          Object {
            "color": "#21af78",
          },
        ]
      }
    >
      +0.5%
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#666",
          "fontSize": 12,
        }
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <Image
      source={1}
    />
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "margin": -10,
          "padding": 10,
        }
      }
    >
      <Image
        source={1}
        style={null}
      />
    </View>
  </View>
</View>
`;

exports[`<WatchListItem /> should render properly when dailyChange is below 0 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#eee",
      "borderBottomWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#666",
            "fontSize": 12,
          },
          Object {
            "color": "#566ed3",
            "fontWeight": "bold",
          },
        ]
      }
    >
      APPL
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#666",
          "fontSize": 12,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#666",
            "fontSize": 12,
          },
          Object {
            "color": "#d82f2f",
          },
        ]
      }
    >
      -0.5%
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#666",
          "fontSize": 12,
        }
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <Image
      source={1}
    />
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "margin": -10,
          "padding": 10,
        }
      }
    >
      <Image
        source={1}
        style={null}
      />
    </View>
  </View>
</View>
`;
